# batfish

./: .bazelrc  README.md  install.sh
bdds/: 0_test_routing_policies_0001.py  README.md  routing_policies_000.txt
benchmarks/: BUILD
experiments/: README.md  check_key_variables.py  check_smt_equivalent.py  filter_equal_variables.py
networks/: BUILD
projects/lib/z3/: BUILD.bazel
smts/: inlining_equal_variables.py  modified_smt_encoding.smt2  original_smt_encoding.smt2  reachability_scenario1_false_as2border1_to_as1border1_GigabitEthernet1_0.smt2  reachability_scenario1_false_as2border1_to_as1core1_GigabitEthernet1_0.smt2  reachability_scenario1_false_with_acl_as2border1_to_as1border1_GigabitEthernet1_0.smt2  reachability_scenario1_false_with_acl_as2border1_to_as1core1_GigabitEthernet1_0.smt2  reachability_scenario1_true_as2border1_to_as1border1_GigabitEthernet1_0.smt2  reachability_scenario1_true_with_acl_as2border1_to_as1border1_GigabitEthernet1_0.smt2  reachability_scenario1_true_with_acl_as2border1_to_as1core1_GigabitEthernet1_0.smt2  reachability_scenario2_false_as2border1_to_as1core1_GigabitEthernet1_0_modified.smt2  reachability_scenario2_false_as2border1_to_as1core1_GigabitEthernet1_0_original.smt2  reachability_scenario2_true_as1border1_to_as1core1_GigabitEthernet1_0.smt2  reachability_scenario2_true_as1border1_to_as1core1_GigabitEthernet1_0_auto_modified.smt2  reachability_scenario2_true_as2border1_to_as1core1_GigabitEthernet1_0_modified.smt2  reachability_scenario2_true_as2border1_to_as1core1_GigabitEthernet1_0_original.smt2  trace_dependencies.py
(+8750 files in other folders)
